# tinyb

./: tl_buildrelease.sh
api/tinyb/: BluetoothObject.hpp
examples/java/: HelloTinyB.java
java/: BluetoothManager.java  CMakeLists.txt
src/: BluetoothManager.cpp
